[package]
name = "chunkmap-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anvil-region = { path = "../anvil-region" }
chunkmap = { path = "../chunkmap" }
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
image = { version = "0.25.6" }

[lib]
name = "chunkmapwasm"
path = "src/lib.rs"
crate-type = ["cdylib"]
